--- a/GameData/RustyStar/RustyStarRockets/Parts/Chute/rsr-chute-radial-2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Chute/rsr-chute-radial-2.cfg
@@ -1,4 +1,4 @@
-// rsr-chute-radial-2.cfg v1.8.99.0 v1.8.99.3
+// rsr-chute-radial.cfg v1.8.99.0 v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 18 Mar 2023
@@ -7,12 +7,12 @@
 
 PART
 {
-	name = rsr-chute-radial-2
+	name = rsr-chute-radial
 	oldName = RadialParachute2
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL { model = RustyStar/RustyStarRockets/Assets/Chute/radial/rsr-chute-radial-2 }
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Chute/radial/rsr-chute-radial }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = size0, srf
