--- a/GameData/RustyStar/RustyStarRockets/Parts/Cargo/RSRcargo1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Cargo/RSRcargo1.cfg
@@ -9,7 +9,7 @@ PART
 	name = rsr-bay-cargo-250
 	oldName = RSRcargo1
 	module = Part
-	author = GagaX
+	author = GagaX and zer0Kerbal
 
 	MODEL { model = RustyStar/RustyStarRockets/Assets/Cargo/one/rsr-bay-cargo-250 }
 	rescaleFactor = 1.0
