--- a/GameData/RustyStar/RustyStarRockets/Parts/Cargo/RSRcargo2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Cargo/RSRcargo2.cfg
@@ -9,7 +9,7 @@ PART
 	name = 
 	oldName = RSRcargo2
 	module = Part
-	author = GagaX
+	author = GagaX and zer0Kerbal
 	MODEL { model = RustyStar/RustyStarRockets/Assets/ }
 mesh = NewModel.mu
 	rescaleFactor = 1.0
