--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-KerbalInTheBox.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-KerbalInTheBox.cfg
@@ -10,7 +10,7 @@ PART
 	name = rsr-KerbalInTheBox
 	oldName = KerbalInTheBox
 	module = Part
-	author = GagaX
+	author = GagaX and zer0Kerbal
 
 	// mesh = model.mu
 	MODEL { model = RustyStar/RustyStarRockets/Assets/rsr-KerbalInTheBox/rsr-KerbalInTheBox }
