--- a/GameData/RustyStar/RustyStarRockets/Parts/Coupling/RustySeparator2/RustySeparator2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Coupling/RustySeparator2/RustySeparator2.cfg
@@ -9,7 +9,7 @@ PART
 	name = 
 	oldName = RustySeparator2
 	module = Part
-	author = GagaX
+	author = GagaX and zer0Kerbal
 	MODEL { model = RustyStar/RustyStarRockets/Assets/ }
 	mesh = model.mu
 	scale = 1
