--- a/GameData/RustyStar/RustyStarRockets/Parts/Coupling/Separator0/part.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Coupling/Separator0/part.cfg
@@ -9,7 +9,7 @@ PART
 	name = 
 	oldName = Separator0
 	module = Part
-	author = GagaX
+	author = GagaX and zer0Kerbal
 	MODEL { model = RustyStar/RustyStarRockets/Assets/ }
 	mesh = model.mu
 	scale = 1
