--- a/GameData/RustyStar/RustyStarRockets/Parts/Cargo/RSRcargo1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Cargo/RSRcargo1.cfg
@@ -1,4 +1,4 @@
-// rsr-bay-cargo-250.cfg v1.8.99.3
+// rsr-bay-cargo-250-1.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 18 Mar 2023
@@ -6,12 +6,12 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = rsr-bay-cargo-250
+	name = rsr-bay-cargo-250-1
 	oldName = RSRcargo1
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL { model = RustyStar/RustyStarRockets/Assets/Cargo/one/rsr-bay-cargo-250 }
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Cargo/one/rsr-bay-cargo-250-1 }
 	rescaleFactor = 1.0
 	bulkheadProfiles = size2, srf
 
