--- a/GameData/RustyStar/RustyStarRockets/Parts/Cargo/RSRcargo2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Cargo/RSRcargo2.cfg
@@ -10,34 +10,41 @@ PART
 	oldName = RSRcargo2
 	module = Part
 	author = GagaX and zer0Kerbal
-	MODEL { model = RustyStar/RustyStarRockets/Assets/ }
-mesh = NewModel.mu
+
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Cargo/one/rsr-bay-cargo-250 }
 	rescaleFactor = 1.0
+	bulkheadProfiles = size2, srf
+
+	attachRules = 1,0,1,1,1
 	node_stack_top = 0.0, -1.94, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -2.0, 0.0, 0.0, -1.0, 0.0, 2
+
 	TechRequired = heavyAerodynamics
 	entryCost = 12000
 	cost = 1099
 	category = Payload
 	subcategory = 0
+
 	title = RSR Cargo Bay 2
 	manufacturer = #RSS-Agency-titl
-	description = .
-	attachRules = 1,0,1,1,1
+	description = Ut fugiat sit nostrud aliqua qui occaecat Lorem anim cillum ea. Pariatur excepteur ut tempor velit Lorem tempor non aliquip eiusmod incididunt sit duis velit qui ea.
+
 	mass = 1
+	fuelCrossFeed = True
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
 	angularDrag = 1
+
 	crashTolerance = 50
-	maxTemp = 2700 // = 3000
+
+	maxTemp = 2700
 	emissiveConstant = 0.87
-	fuelCrossFeed = True
-	bulkheadProfiles = size2, srf
 	breakingForce = 300
 	breakingTorque = 300
 		
-MODULE
+	MODULE
 	{
 		name = ModuleAnimateGeneric
 		animationName = RSRcargo2
