--- a/GameData/RustyStar/RustyStarRockets/Parts/Cargo/rsr-bay-cargo-250-2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Cargo/rsr-bay-cargo-250-2.cfg
@@ -28,21 +28,22 @@ PART
 	title = RSR Cargo Bay 2
 	manufacturer = #RSS-Agency-titl
 	description = Ut fugiat sit nostrud aliqua qui occaecat Lorem anim cillum ea. Pariatur excepteur ut tempor velit Lorem tempor non aliquip eiusmod incididunt sit duis velit qui ea.
+	tags = #autoLOC_500914 // contain convey equipment freight hold hollow payload (stor transport utility
 
 	mass = 1
 	fuelCrossFeed = True
 
 	dragModelType = default
 	maximum_drag = 0.2
-	minimum_drag = 0.3
-	angularDrag = 1
+	minimum_drag = 0.2
+	angularDrag = 2
 
 	crashTolerance = 50
+	breakingForce = 300
+	breakingTorque = 300
 
 	maxTemp = 2700
 	emissiveConstant = 0.87
-	breakingForce = 300
-	breakingTorque = 300
 		
 	MODULE
 	{
