--- a/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
@@ -14,6 +14,7 @@ Localization
 	{
 	// Rusty Star Rockets
 		#RSR-name = Rusty Star Rockets
+		#RSR-ABBV = RSR
 		#RSR-tags = rsr rust star
 
 // 0.8.99.3
