--- a/GameData/RustyStar/RustyStarRockets/Parts/Cargo/rsr-bay-cargo-250-1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Cargo/rsr-bay-cargo-250-1.cfg
@@ -30,33 +30,34 @@ PART
 	description = Est adipisicing do laborum laborum laborum in tempor excepteur. Sunt nisi enim occaecat exercitation nisi commodo magna. Quis eu occaecat pariatur ut enim enim laborum enim dolore sunt proident deserunt eu qui.
 	tags = #autoLOC_500914 // contain convey equipment freight hold hollow payload (stor transport utility
 
-	mass = 1.0
+	mass = 1
 	fuelCrossFeed = True
 
 	dragModelType = default
 	maximum_drag = 0.2
-	minimum_drag = 0.3
-	angularDrag = 1
+	minimum_drag = 0.2
+	angularDrag = 2
 
 	crashTolerance = 50
-
-	maxTemp = 2700 // = 3000
-	emissiveConstant = 0.87
 	breakingForce = 300
 	breakingTorque = 300
+
+	maxTemp = 2700
+	emissiveConstant = 0.87
 		
 	MODULE
 	{
 		name = ModuleAnimateGeneric
 		animationName = RSRcargo1
-		startEventGUIName = Open
-		endEventGUIName = Close
-		actionGUIName = Toggle Bay Doors
+		startEventGUIName = #RSS-MAG-cargo-strt // Open Cargo Bay
+		endEventGUIName = #RSS-MAG-cargo-stop // Close Cargo Bay
+		actionGUIName = #RSS-MAG-cargo-actn // Toggle Cargo Bay
 		allowDeployLimit = true
 		revClampDirection = false
 		revClampSpeed = true
 		revClampPercent = true			
 	}
+
 	//MODULE
 	//{
 	//name = ModuleCargoBay
@@ -69,4 +70,5 @@ PART
 	//nodeInnerForeID = top2
 	//nodeInnerAftID = bottom2
 	//}
+
 }
