--- a/GameData/RustyStar/RustyStarRockets/Parts/Cargo/rsr-bay-cargo-250-2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Cargo/rsr-bay-cargo-250-2.cfg
@@ -44,24 +44,26 @@ PART
 
 	maxTemp = 2700
 	emissiveConstant = 0.87
-		
+
 	MODULE
 	{
 		name = ModuleAnimateGeneric
 		animationName = RSRcargo2
-		startEventGUIName = Open
-		endEventGUIName = Close
-		actionGUIName = Toggle Bay Doors
+		startEventGUIName = #RSS-MAG-cargo-strt // Open Cargo Bay
+		endEventGUIName = #RSS-MAG-cargo-stop // Close Cargo Bay
+		actionGUIName = #RSS-MAG-cargo-actn // Toggle Cargo Bay
 		allowDeployLimit = true
 		revClampDirection = false
 		revClampSpeed = true
 		revClampPercent = true			
 	}
-MODULE
-{
-    name = FlagDecal
-    textureQuadName = FLAG
-}
+
+	MODULE
+	{
+		name = FlagDecal
+		textureQuadName = FLAG
+	}
+
 	//MODULE
 	//{
 	//name = ModuleCargoBay
@@ -74,4 +76,5 @@ MODULE
 	//nodeInnerForeID = top2
 	//nodeInnerAftID = bottom2
 	//}
+
 }
