--- a/GameData/RustyStar/RustyStarRockets/Parts/Coupling/RustySeparator2/RustySeparator2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Coupling/RustySeparator2/RustySeparator2.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.3
+// rsr-coupling-sep-250.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 18 Mar 2023
@@ -6,40 +6,50 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = 
+	name = rsr-coupling-sep-250
 	oldName = RustySeparator2
 	module = Part
 	author = GagaX and zer0Kerbal
+
 	MODEL { model = RustyStar/RustyStarRockets/Assets/ }
-	mesh = model.mu
 	scale = 1
 	rescaleFactor = 1.0
+	bulkheadProfiles = size1
+
+	attachRules = 1,0,1,1,0
 	node_stack_bottom = 0.0, -0.2, 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_top = 0.0, 0.2, 0.0, 0.0, 1.0, 0.0, 2
-	fx_gasBurst_white = 0.0, 0.0650517, 0.0, 0.0, 1.0, 0.0, decouple
+
 	sound_vent_large = decouple
+	fx_gasBurst_white = 0.0, 0.0650517, 0.0, 0.0, 1.0, 0.0, decouple
+
 	TechRequired = generalConstruction
 	entryCost = 4200
 	cost = 399
 	category = Coupling
 	subcategory = 0
+
 	title = Rusty Separator 2
 	manufacturer = #RSS-Agency-titl
-description = Created as a substitute for infamous Zipper X-1 
-	attachRules = 1,0,1,1,0
+	description = Created as a substitute for infamous Zipper X-1 
+
 	mass = 0.075
+	fuelCrossFeed = False
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
+
 	crashTolerance = 9
-breakingForce = 200
+	breakingForce = 200
 	breakingTorque = 200
-	maxTemp = 2000 // = 3400
-	fuelCrossFeed = False
+
+	maxTemp = 2000
+
 	stageOffset = 1
 	childStageOffset = 1
-	bulkheadProfiles = size1
+
 	MODULE
 	{
 		name = ModuleDecouple
