--- a/GameData/RustyStar/RustyStarRockets/Parts/Coupling/Separator/part.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Coupling/Separator/part.cfg
@@ -7,7 +7,7 @@
 PART
 {
 	name = 
-	oldName = eparator
+	oldName = Separator
 	module = Part
 	author = GagaX and zer0Kerbal
 	MODEL { model = RustyStar/RustyStarRockets/Assets/ }
@@ -35,7 +35,7 @@ PART
 	crashTolerance = 9
 breakingForce = 200
 	breakingTorque = 200
-	maxTemp = 2000 // = 3400
+	maxTemp = 2000
 	fuelCrossFeed = False
 	stageOffset = 1
 	childStageOffset = 1
