--- a/GameData/RustyStar/RustyStarRockets/Parts/Coupling/Separator0/part.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Coupling/Separator0/part.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.3
+// rsr-coupling-sep-0625.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 18 Mar 2023
@@ -6,46 +6,57 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = 
+	name = rsr-coupling-sep-0625
 	oldName = Separator0
 	module = Part
 	author = GagaX and zer0Kerbal
-	MODEL { model = RustyStar/RustyStarRockets/Assets/ }
-	mesh = model.mu
+
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Coupling/0/rsr-coupling-sep-0625 }
 	scale = 1
 	rescaleFactor = 1.0
+	bulkheadProfiles = size0
+
+	attachRules = 1,0,1,1,0
 	node_stack_bottom = 0.0, -0.04040, 0.0, 0.0, -1.0, 0.0
 	node_stack_top = 0.0, 0.04040, 0.0, 0.0, 1.0, 0.0
+
 	sound_vent_large = decouple
+
 	TechRequired = miniaturization
 	entryCost = 600
 	cost = 200
 	category = Coupling
 	subcategory = 0
+
 	title = RSR Separator 0
 	manufacturer = #RSS-Agency-titl
 	description = Made of scrap metal and assorted firecrackers.
-	attachRules = 1,0,1,1,0
+
 	mass = 0.01
+	fuelCrossFeed = False
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
+
 	crashTolerance = 9
-breakingForce = 200
+	breakingForce = 200
 	breakingTorque = 200
-	maxTemp = 2000 // = 3400
-	fuelCrossFeed = False
+
+	maxTemp = 2000
+
 	stageOffset = 1
 	childStageOffset = 1
-	bulkheadProfiles = size0
+
 	MODULE
 	{
 		name = ModuleDecouple
-                isOmniDecoupler = true
+		isOmniDecoupler = true
 		ejectionForce = 35
 		
 	}
+
 	MODULE
 	{
 		name = ModuleTestSubject
