--- a/GameData/RustyStar/RustyStarRockets/Parts/Coupling/Separator0/part.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Coupling/Separator0/part.cfg
@@ -20,7 +20,8 @@ PART
 	node_stack_bottom = 0.0, -0.04040, 0.0, 0.0, -1.0, 0.0
 	node_stack_top = 0.0, 0.04040, 0.0, 0.0, 1.0, 0.0
 
-	sound_vent_large = decouple
+	sound_decoupler_fire = decouple
+	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 
 	TechRequired = miniaturization
 	entryCost = 600
@@ -31,6 +32,7 @@ PART
 	title = RSR Separator 0
 	manufacturer = #RSS-Agency-titl
 	description = Made of scrap metal and assorted firecrackers.
+	tags = #autoLOC_501795   //#autoLOC_501795 = decouple	
 
 	mass = 0.01
 	fuelCrossFeed = False
@@ -40,9 +42,9 @@ PART
 	minimum_drag = 0.2
 	angularDrag = 2
 
-	crashTolerance = 9
-	breakingForce = 200
-	breakingTorque = 200
+	crashTolerance = 6
+	breakingForce = 150
+	breakingTorque = 150
 
 	maxTemp = 2000
 
@@ -51,18 +53,124 @@ PART
 
 	MODULE
 	{
+		name = ModuleToggleCrossfeed
+		crossfeedStatus = false
+		toggleEditor = true
+		toggleFlight = true
+	}
+
+	MODULE
+	{
 		name = ModuleDecouple
-		isOmniDecoupler = true
-		ejectionForce = 35
-		
+		ejectionForce = 100
+		ejectionForcePercent = 50
+		isOmniDecoupler = True
+		fxGroupName = decouple
+		staged = True
+		stagingEnabled = True
+		menuName = #autoLOC_6001443 // Decouple
+		stagingEnableText = #autoLOC_240328 // Decoupler: Enable Staging
+		stagingDisableText = #autoLOC_240329 // Decoupler: Disable Staging
+		stagingToggleEnabledEditor = True
+		stagingToggleEnabledFlight = True
 	}
 
 	MODULE
 	{
 		name = ModuleTestSubject
-		environments = 15
 		useStaging = True
 		useEvent = False
+		situationMask = 127
+		CONSTRAINT
+		{
+			type = REPEATABILITY
+			value = ALWAYS
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = REPEATABILITY
+			value = BODYANDSITUATION
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = REPEATABILITY
+			value = ONCEPERPART
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDE
+			test = GT
+			value = 0 // this just registers altitude as something to care about
+			situationMask = 8
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = GT
+			value = 4000
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = LT
+			value = 8000
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = GT
+			value = 2000
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = LT
+			value = 4000
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = GT
+			value = 1000
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = LT
+			value = 2000
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = SPEED
+			test = LT
+			value = 2000
+			situationMask = 8
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDE
+			test = LT
+			value = 300000
+			situationMask = 16
+			body = _NotSun
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDE
+			test = LT
+			value = 600000
+			situationMask = 32
+			body = _NotSun
+		}
 	}
 	
 }
