--- a/GameData/RustyStar/RustyStarRockets/Parts/Coupling/Separator/part.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Coupling/Separator/part.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.3
+// rsr-coupling-sep-125.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 18 Mar 2023
@@ -6,11 +6,11 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = 
+	name = rsr-coupling-sep-125
 	oldName = Separator
 	module = Part
 	author = GagaX and zer0Kerbal
-	MODEL { model = RustyStar/RustyStarRockets/Assets/ }
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Coupling/1/rsr-coupling-sep-125 }
 	mesh = model.mu
 	scale = 1
 	rescaleFactor = 1.0
