--- a/GameData/RustyStar/RustyStarRockets/Parts/Coupling/rsr-coupling-sep-0625.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Coupling/rsr-coupling-sep-0625.cfg
@@ -29,13 +29,13 @@ PART
 	category = Coupling
 	subcategory = 0
 
-	title = RSR Separator 0
+	title = Separator 0.625m
 	manufacturer = #RSS-Agency-titl
 	description = Made of scrap metal and assorted firecrackers.
-	tags = #autoLOC_501795   //#autoLOC_501795 = decouple	
+	tags = #autoLOC_501795   // decouple	
 
 	mass = 0.01
-	fuelCrossFeed = False
+	fuelCrossFeed = True
 
 	dragModelType = default
 	maximum_drag = 0.2
