--- a/GameData/RustyStar/RustyStarRockets/Parts/Coupling/RustySeparator2/RustySeparator2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Coupling/RustySeparator2/RustySeparator2.cfg
@@ -11,7 +11,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL { model = RustyStar/RustyStarRockets/Assets/ }
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Coupling/2/rsr-coupling-sep-250 } }
 	scale = 1
 	rescaleFactor = 1.0
 	bulkheadProfiles = size1
@@ -32,6 +32,7 @@ PART
 	title = Rusty Separator 2
 	manufacturer = #RSS-Agency-titl
 	description = Created as a substitute for infamous Zipper X-1 
+	tags = #autoLOC_501795   // decouple	
 
 	mass = 0.075
 	fuelCrossFeed = False
