--- a/GameData/RustyStar/RustyStarRockets/Parts/Coupling/Separator/part.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Coupling/Separator/part.cfg
@@ -10,52 +10,167 @@ PART
 	oldName = Separator
 	module = Part
 	author = GagaX and zer0Kerbal
+
 	MODEL { model = RustyStar/RustyStarRockets/Assets/Coupling/1/rsr-coupling-sep-125 }
-	mesh = model.mu
 	scale = 1
 	rescaleFactor = 1.0
+	bulkheadProfiles = size1
+
+	attachRules = 1,0,1,1,0
 	node_stack_bottom = 0.0, -0.16, 0.0, 0.0, -1.0, 0.0
 	node_stack_top = 0.0, 0.16, 0.0, 0.0, 1.0, 0.0
+
+	sound_decoupler_fire = decouple
 	fx_gasBurst_white = 0.0, 0.0650517, 0.0, 0.0, 1.0, 0.0, decouple
-	sound_vent_large = decouple
+
 	TechRequired = engineering101
 	entryCost = 1200
 	cost = 400
 	category = Coupling
 	subcategory = 0
-	title = Separator
+
+	title = Separator 1.25m
 	manufacturer = #RSS-Agency-titl
 	description = Made of scrap metal and assorted firecrackers.
-	attachRules = 1,0,1,1,0
+	tags = #autoLOC_501795   // decouple	
+
 	mass = 0.05
+	fuelCrossFeed = True
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
-	crashTolerance = 9
-breakingForce = 200
-	breakingTorque = 200
+
+	crashTolerance = 6
+	breakingForce = 150
+	breakingTorque = 150
+
 	maxTemp = 2000
-	fuelCrossFeed = False
+
 	stageOffset = 1
 	childStageOffset = 1
-	bulkheadProfiles = size1
+
+	MODULE
+	{
+		name = ModuleToggleCrossfeed
+		crossfeedStatus = false
+		toggleEditor = true
+		toggleFlight = true
+	}
+
 	MODULE
 	{
 		name = ModuleDecouple
-                isOmniDecoupler = true
-		ejectionForce = 75
-		
+		ejectionForce = 150
+		ejectionForcePercent = 50
+		isOmniDecoupler = True
+		fxGroupName = decouple
+		staged = True
+		stagingEnabled = True
+		menuName = #autoLOC_6001443 // Decouple
+		stagingEnableText = #autoLOC_240328 // Decoupler: Enable Staging
+		stagingDisableText = #autoLOC_240329 // Decoupler: Disable Staging
+		stagingToggleEnabledEditor = True
+		stagingToggleEnabledFlight = True
 	}
+
 	MODULE
 	{
 		name = ModuleTestSubject
-		environments = 15
 		useStaging = True
 		useEvent = False
+		situationMask = 127
+		CONSTRAINT
+		{
+			type = REPEATABILITY
+			value = ALWAYS
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = REPEATABILITY
+			value = BODYANDSITUATION
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = REPEATABILITY
+			value = ONCEPERPART
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDE
+			test = GT
+			value = 0 // this just registers altitude as something to care about
+			situationMask = 8
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = GT
+			value = 4000
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = LT
+			value = 8000
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = GT
+			value = 2000
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = LT
+			value = 4000
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = GT
+			value = 1000
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = LT
+			value = 2000
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = SPEED
+			test = LT
+			value = 2000
+			situationMask = 8
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDE
+			test = LT
+			value = 300000
+			situationMask = 16
+			body = _NotSun
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDE
+			test = LT
+			value = 600000
+			situationMask = 32
+			body = _NotSun
+		}
 	}
-	DRAG_CUBE
-	{
-		cube = Default, 0.3840669,0.7586023,0.765933, 0.3840669,0.7586111,0.765933, 1.250829,0.890376,0.2939519, 1.250829,0.9989504,0.1118914, 0.3840669,0.7559006,0.7659331, 0.3840669,0.7590505,0.7659331, 0,7.82311E-09,-9.325873E-16, 1.337897,0.2835982,1.337897
-	}
+
 }
