--- a/GameData/RustyStar/RustyStarRockets/Parts/Coupling/rsr-coupling-sep-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Coupling/rsr-coupling-sep-250.cfg
@@ -11,17 +11,17 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL { model = RustyStar/RustyStarRockets/Assets/Coupling/2/rsr-coupling-sep-250 } }
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Coupling/2/rsr-coupling-sep-250 }
 	scale = 1
 	rescaleFactor = 1.0
-	bulkheadProfiles = size1
+	bulkheadProfiles = size2
 
 	attachRules = 1,0,1,1,0
 	node_stack_bottom = 0.0, -0.2, 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_top = 0.0, 0.2, 0.0, 0.0, 1.0, 0.0, 2
 
-	sound_vent_large = decouple
-	fx_gasBurst_white = 0.0, 0.0650517, 0.0, 0.0, 1.0, 0.0, decouple
+	sound_decoupler_fire = decouple	
+	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 
 	TechRequired = generalConstruction
 	entryCost = 4200
@@ -34,17 +34,17 @@ PART
 	description = Created as a substitute for infamous Zipper X-1 
 	tags = #autoLOC_501795   // decouple	
 
-	mass = 0.075
-	fuelCrossFeed = False
+	mass = 0.075 // 0.21
+	fuelCrossFeed = True
 
 	dragModelType = default
 	maximum_drag = 0.2
-	minimum_drag = 0.2
+	minimum_drag = 0.3
 	angularDrag = 2
 
-	crashTolerance = 9
-	breakingForce = 200
-	breakingTorque = 200
+	crashTolerance = 6
+	breakingForce = 150
+	breakingTorque = 150
 
 	maxTemp = 2000
 
@@ -53,19 +53,124 @@ PART
 
 	MODULE
 	{
-		name = ModuleDecouple
-		isOmniDecoupler = true
-		ejectionForce = 200
+		name = ModuleToggleCrossfeed
+		crossfeedStatus = false
+		toggleEditor = true
+		toggleFlight = true
 	}
+
+	MODULE
+	{
+		name = ModuleDecouple
+		ejectionForce = 400
+		ejectionForcePercent = 50
+		isOmniDecoupler = True
+		fxGroupName = decouple
+		staged = True
+		stagingEnabled = True
+		menuName = #autoLOC_6001443 // Decouple
+		stagingEnableText = #autoLOC_240328 // Decoupler: Enable Staging
+		stagingDisableText = #autoLOC_240329 // Decoupler: Disable Staging
+		stagingToggleEnabledEditor = True
+		stagingToggleEnabledFlight = True
+	}
+
 	MODULE
 	{
 		name = ModuleTestSubject
-		environments = 15
 		useStaging = True
 		useEvent = False
+		situationMask = 127
+		CONSTRAINT
+		{
+			type = REPEATABILITY
+			value = ALWAYS
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = REPEATABILITY
+			value = BODYANDSITUATION
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = REPEATABILITY
+			value = ONCEPERPART
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDE
+			test = GT
+			value = 0 // this just registers altitude as something to care about
+			situationMask = 8
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = GT
+			value = 4000
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = LT
+			value = 8000
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = GT
+			value = 2000
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = LT
+			value = 4000
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = GT
+			value = 1000
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = LT
+			value = 2000
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = SPEED
+			test = LT
+			value = 2000
+			situationMask = 8
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDE
+			test = LT
+			value = 300000
+			situationMask = 16
+			body = _NotSun
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDE
+			test = LT
+			value = 600000
+			situationMask = 32
+			body = _NotSun
+		}
 	}
-	DRAG_CUBE
-	{
-		cube = Default, 0.5473201,0.7008904,0.7968628, 0.5473201,0.7008521,0.7968628, 1.500829,0.8234898,0.2206994, 1.500829,0.8234897,0.2206994, 0.5473201,0.6968417,0.7968628, 0.5473201,0.696598,0.7968628, 0,0,0, 1.4,0.4543995,1.4
-	}
+
 }
