--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/landingLaser.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/landingLaser.cfg
@@ -6,9 +6,12 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = landingLaser
+	name = 
+	oldName = landingLaser
 	module = Part
 	author = GagaX and zer0Kerbal
+
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Lights/ }
 	rescaleFactor = 0.5
 	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 0
 	TechRequired = advElectrics
