--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/obrucLight.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/obrucLight.cfg
@@ -6,9 +6,12 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = obrucLight
+	name = 
+	oldName = obrucLight
 	module = Part
 	author = GagaX and zer0Kerbal
+
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Lights/obrucLight }
 	rescaleFactor = 1.0
 	node_attach = 0.0, 0.0, -0.01, 0.0, 0.0, -1.0
 	TechRequired = advElectrics
@@ -29,7 +32,6 @@ PART
 	maxTemp = 2000
 	PhysicsSignificance = 1
 	bulkheadProfiles = srf
-MODEL { model = RustyStar/RustyStarRockets/Parts/Utility/RSR_lights/obrucLight }
 	MODULE
 {
    name = ModuleAnimateGeneric
