--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/obrucLight2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/obrucLight2.cfg
@@ -6,9 +6,12 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = obrucLight2
+	name = 
+	oldName = obrucLight2
 	module = Part
 	author = GagaX and zer0Kerbal
+
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Lights/ }
 	rescaleFactor = 1.0
 	node_attach = 0.0, 0.0, -0.01, 0.0, 0.0, -1.0
 	TechRequired = largeElectrics
