--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/RSR_bulb1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/RSR_bulb1.cfg
@@ -6,9 +6,12 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = RSR_bulb1
+	name = 
+	oldName = RSR_bulb1
 	module = Part
 	author = GagaX and zer0Kerbal
+
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Lights/ }
 	rescaleFactor = 2
 	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 0
 	TechRequired = electrics
