--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/RSRspotlight.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/RSRspotlight.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.3
+// rsr-light-spot.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 18 Mar 2023
@@ -6,42 +6,63 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = 
+	name = rsr-light-spot
 	oldName = RSRspotlight
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL { model = RustyStar/RustyStarRockets/Assets/Lights/ }
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Lights/SpotlightX }
 	rescaleFactor = 0.65
+	bulkheadProfiles = srf
+
+	attachRules = 0,1,0,0,0
 	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 0
+
 	TechRequired = electrics
 	entryCost = 899
-	cost = 449
+	cost = 45
 	category = Utility
 	subcategory = 0
+
 	title = RSR Spotlight
 	manufacturer = #RSS-Agency-titl
 	description = For optimal results set these RGB values in VAB/SPH: 0.0 1.0 0.75
-	attachRules = 0,1,0,0,1
-	mass = 0.01
+	tags = #autoLOC_6011162 // moar (more bulb candle dark flash (lamp (light shine spot torch
+
+	mass = 0.01 // 0.005
+	PhysicsSignificance = 1
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 1
+
 	crashTolerance = 8
+
 	maxTemp = 2000
-	PhysicsSignificance = 1
-	bulkheadProfiles = srf
-MODEL { model = RustyStar/RustyStarRockets/Parts/Utility/RSR_lights/SpotlightX }
+
 	MODULE
 	{
 		name = ModuleLight
+		moduleID = Portlight2
 		lightName = sjaj
-		useAnimationDim = true
-		lightBrightenSpeed = 8
-		lightDimSpeed = 6
-		resourceAmount = 0.01
 		animationName = SpotX
-		useResources = true
+			useAnimationDim = True
+			lightBrightenSpeed = 8
+			lightDimSpeed = 6
+		useResources = True
+			resourceName = ElectricCharge
+			resourceAmount = 0.01
+		castLight = True
+			disableColorPicker = false
+			lightR = 0.0
+			lightG = 1.0
+			lightB = 0.0
+		canBlink = True
+			blinkMin = 0.2
+			blinkMax = 2.0
+			blinkRate = 0.5
+			isBlinking = True
 	}
+
 }
