--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/eLightTriangle.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/eLightTriangle.cfg
@@ -22,6 +22,7 @@ PART
 	title = RSR Light Emitting Decoration LED-2
 	manufacturer = #RSS-Agency-titl
 	description = Light
+	tags = #autoLOC_6011162 // moar (more bulb candle dark flash (lamp (light shine spot torch
 	attachRules = 0,1,0,0,1
 	mass = 0.001
 	dragModelType = default
