--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/landingLaser.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/landingLaser.cfg
@@ -23,6 +23,7 @@ PART
 	manufacturer = #RSS-Agency-titl
 	description = Landing Laser. For optimal results set these RGB values in VAB/SPH: 0.0 1.0 0.75
 	attachRules = 0,1,0,0,1
+	tags = #autoLOC_6011162 // moar (more bulb candle dark flash (lamp (light shine spot torch
 	mass = 0.01
 	dragModelType = default
 	maximum_drag = 0.2
