--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/obrucLight.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/obrucLight.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.3
+// rsr-light-obruc-1.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 18 Mar 2023
@@ -6,7 +6,7 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = 
+	name = rsr-light-obruc-1
 	oldName = obrucLight
 	module = Part
 	author = GagaX and zer0Kerbal
