--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/obrucLight2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/obrucLight2.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.3
+// rsr-light-obruc-2.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 18 Mar 2023
@@ -6,23 +6,30 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = 
+	name = rsr-light-obruc-2
 	oldName = obrucLight2
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL { model = RustyStar/RustyStarRockets/Assets/Lights/ }
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Lights/obrucLight2 }
 	rescaleFactor = 1.0
+	bulkheadProfiles = srf
+
+	attachRules = 0,1,0,0,1
 	node_attach = 0.0, 0.0, -0.01, 0.0, 0.0, -1.0
+
 	TechRequired = largeElectrics
 	entryCost = 1000
 	cost = 200
+
 	category = Utility
 	subcategory = 0
+
 	title = RSR Light Emitting Decoration LED-4
 	manufacturer = #RSS-Agency-titl
 	description = Light belt 2
-	attachRules = 0,1,0,0,1
+	tags = #autoLOC_6011162 // moar (more bulb candle dark flash (lamp (light shine spot torch
+
 	mass = 0.03
 	dragModelType = default
 	maximum_drag = 0.2
@@ -31,8 +38,7 @@ PART
 	crashTolerance = 8
 	maxTemp = 2000
 	PhysicsSignificance = 1
-	bulkheadProfiles = srf
-MODEL { model = RustyStar/RustyStarRockets/Parts/Utility/RSR_lights/obrucLight2 }
+MODEL { model = RustyStar/RustyStarRockets/Parts/Utility/RSR_lights/ }
 	MODULE
 {
    name = ModuleAnimateGeneric
