--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/RSR_bulb1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/RSR_bulb1.cfg
@@ -22,7 +22,7 @@ PART
 	title = RSR Bulbinator
 	manufacturer = #RSS-Agency-titl
 	description = Omnidirectional light. For optimal results set these RGB values in VAB/SPH: 0.0 1.0 0.75
-	attachRules = 0,1,0,0,1
+	attachRules = 0,1,0,0,1	tags = #autoLOC_6011162 // moar (more bulb candle dark flash (lamp (light shine spot torch
 	mass = 0.015
 	dragModelType = default
 	maximum_drag = 0.2
