--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-obruc-1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-obruc-1.cfg
@@ -13,35 +13,51 @@ PART
 
 	MODEL { model = RustyStar/RustyStarRockets/Assets/Lights/obrucLight }
 	rescaleFactor = 1.0
+	bulkheadProfiles = srf
+
+	attachRules = 0,1,0,0,1
 	node_attach = 0.0, 0.0, -0.01, 0.0, 0.0, -1.0
+
 	TechRequired = advElectrics
 	entryCost = 500
 	cost = 100
 	category = Utility
 	subcategory = 0
+
 	title = RSR Light Emitting Decoration LED-3
 	manufacturer = #RSS-Agency-titl
 	description = Light belt
-	attachRules = 0,1,0,0,1
+	tags = #autoLOC_6011162 // moar (more bulb candle dark flash (lamp (light shine spot torch
+
 	mass = 0.015
+	PhysicsSignificance = 1
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 1
+
 	crashTolerance = 8
+
 	maxTemp = 2000
-	PhysicsSignificance = 1
-	bulkheadProfiles = srf
+
 	MODULE
-{
-   name = ModuleAnimateGeneric
-   animationName = EmmAnim
-   isOneShot = false
-   
- startEventGUIName = Let there be light
- endEventGUIName = Let there be dark
- actionGUIName = Toggle unnecessary lights
- defaultActionGroup  = Lights
+	{
+		name = ModuleAnimateGeneric
+		animationName = EmmAnim
+		startEventGUIName = #RSS-MAG-light-belt-strt // Let there be light
+		endEventGUIName = #RSS-MAG-light-belt-stop // Let there be dark
+		actionGUIName = #RSS-MAG-light-belt-actn // Toggle unnecessary lights
+		eventAvailableEditor = True
+		eventAvailableFlight = True
+		eventAvailableEVA = True
+		evaDistance = 10
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
+		isOneShot = False
+		defaultActionGroup  = Lights
 	}
 
 	MODULE
