--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-obruc-2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-obruc-2.cfg
@@ -21,7 +21,6 @@ PART
 	TechRequired = largeElectrics
 	entryCost = 1000
 	cost = 200
-
 	category = Utility
 	subcategory = 0
 
@@ -31,22 +30,71 @@ PART
 	tags = #autoLOC_6011162 // moar (more bulb candle dark flash (lamp (light shine spot torch
 
 	mass = 0.03
+	PhysicsSignificance = 1
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 1
+
 	crashTolerance = 8
+
 	maxTemp = 2000
-	PhysicsSignificance = 1
-MODEL { model = RustyStar/RustyStarRockets/Parts/Utility/RSR_lights/ }
+
 	MODULE
-{
-   name = ModuleAnimateGeneric
-   animationName = EmmAnim
-   isOneShot = false
-   
- startEventGUIName = Let there be light
- endEventGUIName = Let there be dark
- actionGUIName = Toggle unnecessary lights
-}
+	{
+		name = ModuleAnimateGeneric
+		animationName = EmmAnim
+		startEventGUIName = #RSS-MAG-light-belt-strt // Let there be light
+		endEventGUIName = #RSS-MAG-light-belt-stop // Let there be dark
+		actionGUIName = #RSS-MAG-light-belt-actn // Toggle unnecessary lights
+		eventAvailableEditor = True
+		eventAvailableFlight = True
+		eventAvailableEVA = True
+		evaDistance = 10
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
+		isOneShot = False
+		defaultActionGroup  = Lights
+	}
+
+	MODULE
+	{
+		name = ModuleColorChanger
+		shaderProperty = _EmissiveColor
+		animRate = 0.8
+		animState = False
+		useRate = True
+		toggleInEditor = True
+		toggleInFlight = True
+		toggleInFlight = True
+		unfocusedRange = 5
+		toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+		eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+		toggleAction = True
+		defaultActionGroup = Light
+		redCurve
+		{
+			key = 0 0 0 3
+			key = 1 1 0 0
+		}
+		greenCurve
+		{
+			key = 0 0 0 1
+			key = 1 1 1 0
+		}
+		blueCurve
+		{
+			key = 0 0 0 0
+			key = 1 0.7 1.5 0
+		}
+		alphaCurve
+		{
+			key = 0 1
+		}
+	}
+
 }
