--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/RSR_bulb1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/RSR_bulb1.cfg
@@ -6,42 +6,99 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = 
+	name = rsr-light-bulb
 	oldName = RSR_bulb1
 	module = Part
 	author = GagaX and zer0Kerbal
 
 	MODEL { model = RustyStar/RustyStarRockets/Assets/Lights/ }
-	rescaleFactor = 2
+	rescaleFactor = 2.0
+	bulkheadProfiles = srf
+
+	attachRules = 0,1,0,0,1
 	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 0
+
 	TechRequired = electrics
 	entryCost = 549
 	cost = 29
 	category = Utility
 	subcategory = 0
+
 	title = RSR Bulbinator
 	manufacturer = #RSS-Agency-titl
 	description = Omnidirectional light. For optimal results set these RGB values in VAB/SPH: 0.0 1.0 0.75
-	attachRules = 0,1,0,0,1	tags = #autoLOC_6011162 // moar (more bulb candle dark flash (lamp (light shine spot torch
+	tags = #autoLOC_6011162 // moar (more bulb candle dark flash (lamp (light shine spot torch
+
 	mass = 0.015
+	PhysicsSignificance = 1
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 1
+
 	crashTolerance = 8
+
 	maxTemp = 2000
-	PhysicsSignificance = 1
-	bulkheadProfiles = srf
-MODEL { model = RustyStar/RustyStarRockets/Parts/Utility/RSR_lights/bulb1 }
+
 	MODULE
 	{
 		name = ModuleLight
 		lightName = nit
-		useAnimationDim = true
-		lightBrightenSpeed = 2.5
-		lightDimSpeed = 0.5
-		resourceAmount = 0.005
 		animationName = bukb1
-		useResources = true
+			useAnimationDim = True
+			lightBrightenSpeed = 2.5
+			lightDimSpeed = 0.5
+		useResources = True
+			resourceName = ElectricCharge
+			resourceAmount = 0.005
+		castLight = True
+			disableColorPicker = false
+			lightR = 0.0
+			lightG = 1.0
+			lightB = 0.0
+		canBlink = True
+			blinkMin = 0.2
+			blinkMax = 2.0
+			blinkRate = 0.5
+			isBlinking = True
+		defaultActionGroup  = Lights
+	}
+	
+	MODULE
+	{
+		name = ModuleColorChanger
+		shaderProperty = _EmissiveColor
+		animRate = 0.8
+		animState = False
+		useRate = True
+		toggleInEditor = True
+		toggleInFlight = True
+		toggleInFlight = True
+		unfocusedRange = 5
+		toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+		eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+		toggleAction = True
+		defaultActionGroup = Light
+		redCurve
+		{
+			key = 0 0 0 3
+			key = 1 1 0 0
+		}
+		greenCurve
+		{
+			key = 0 0 0 1
+			key = 1 1 1 0
+		}
+		blueCurve
+		{
+			key = 0 0 0 0
+			key = 1 0.7 1.5 0
+		}
+		alphaCurve
+		{
+			key = 0 1
+		}
 	}
 }
