--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-bulb.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-bulb.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.3
+// rsr-light-bulb.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 18 Mar 2023
@@ -11,7 +11,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL { model = RustyStar/RustyStarRockets/Assets/Lights/ }
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Lights/bulb1 }
 	rescaleFactor = 2.0
 	bulkheadProfiles = srf
 
