--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/eLight.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/eLight.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.3
+// rsr-light-e.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 18 Mar 2023
@@ -6,42 +6,95 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = 
+	name = rsr-light-e
 	oldName = eLight
 	module = Part
 	author = GagaX and zer0Kerbal
 
 	MODEL { model = RustyStar/RustyStarRockets/Assets/Lights/eLight }
 	rescaleFactor = 0.2
+	bulkheadProfiles = srf
+
+	attachRules = 0,1,0,0,1
 	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 0
+
 	TechRequired = electrics
 	entryCost = 199
 	cost = 29
 	category = Utility
 	subcategory = 0
+
 	title = RSR Light Emitting Decoration LED-1
 	manufacturer = #RSS-Agency-titl
 	description = Light
 	tags = #autoLOC_6011162 // moar (more bulb candle dark flash (lamp (light shine spot torch
-	attachRules = 0,1,0,0,1
+
 	mass = 0.001
+	PhysicsSignificance = 1
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 1
+
 	crashTolerance = 8
+
 	maxTemp = 2000
-	PhysicsSignificance = 1
-	bulkheadProfiles = srf
-MODEL { model = RustyStar/RustyStarRockets/Parts/Utility/RSR_lights/ }
+
 	MODULE
-{
-   name = ModuleAnimateGeneric
-   animationName = EmmAnim
-   isOneShot = false
-   
- startEventGUIName = Let there be light
- endEventGUIName = Let there be dark
- actionGUIName = Toggle unnecessary lights
-}
+	{
+		name = ModuleAnimateGeneric
+		animationName = EmmAnim
+		startEventGUIName = #RSS-MAG-light-belt-strt // Let there be light
+		endEventGUIName = #RSS-MAG-light-belt-stop // Let there be dark
+		actionGUIName = #RSS-MAG-light-belt-actn // Toggle unnecessary lights
+		eventAvailableEditor = True
+		eventAvailableFlight = True
+		eventAvailableEVA = True
+		evaDistance = 10
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
+		isOneShot = False
+		defaultActionGroup  = Lights
+	}
+
+	MODULE
+	{
+		name = ModuleColorChanger
+		shaderProperty = _EmissiveColor
+		animRate = 0.8
+		animState = False
+		useRate = True
+		toggleInEditor = True
+		toggleInFlight = True
+		toggleInFlight = True
+		unfocusedRange = 5
+		toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+		eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+		toggleAction = True
+		defaultActionGroup = Light
+		redCurve
+		{
+			key = 0 0 0 3
+			key = 1 1 0 0
+		}
+		greenCurve
+		{
+			key = 0 0 0 1
+			key = 1 1 1 0
+		}
+		blueCurve
+		{
+			key = 0 0 0 0
+			key = 1 0.7 1.5 0
+		}
+		alphaCurve
+		{
+			key = 0 1
+		}
+	}
+
 }
