--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/eLightTriangle.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/eLightTriangle.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.3
+// rsr-light-e-tri.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 18 Mar 2023
@@ -6,7 +6,7 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = 
+	name = rsr-light-e-tri
 	oldName = eLightTriangle
 	module = Part
 	author = GagaX and zer0Kerbal
@@ -33,7 +33,7 @@ PART
 	maxTemp = 2000
 	PhysicsSignificance = 1
 	bulkheadProfiles = srf
-MODEL { model = RustyStar/RustyStarRockets/Parts/Utility/RSR_lights/ }
+
 	MODULE
 {
    name = ModuleAnimateGeneric
