--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-0625.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-0625.cfg
@@ -146,7 +146,7 @@ PART
 		eventOnName = Lights On
 		eventOffName = Lights Off
 		toggleAction = True
-		defaultActionGroup = Light
+		defaultActionGroup = Lights
 		redCurve
 		{
 			key = 0 0 0 3
