--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-250-rtg.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-250-rtg.cfg
@@ -187,7 +187,7 @@ PART
 		eventOnName = Lights On
 		eventOffName = Lights Off
 		toggleAction = True
-		defaultActionGroup = Light
+		defaultActionGroup = Lights
 		redCurve
 		{
 			key = 0 0 0 3
