--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-avion-125.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-capsule-avion-125.cfg
@@ -144,7 +144,7 @@ PART
 		eventOnName = Lights On
 		eventOffName = Lights Off
 		toggleAction = True
-		defaultActionGroup = Light
+		defaultActionGroup = Lights
 		redCurve
 		{
 			key = 0 0 0 3
