--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-cockpit-mk2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-cockpit-mk2.cfg
@@ -157,7 +157,7 @@ PART
 		eventOnName = Lights On
 		eventOffName = Lights Off
 		toggleAction = True
-		defaultActionGroup = Light
+		defaultActionGroup = Lights
 		redCurve
 		{
 			key = 0 0 0 3
