--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-hq.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-hq.cfg
@@ -101,7 +101,7 @@ PART
 		eventOnName = Lights On
 		eventOffName = Lights Off
 		toggleAction = True
-		defaultActionGroup = Light
+		defaultActionGroup = Lights
 		redCurve
 		{
 			key = 0 0 0 3
