--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-skull-pod.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-skull-pod.cfg
@@ -188,7 +188,7 @@ MODULE // new
 		eventOnName = Lights On
 		eventOffName = Lights Off
 		toggleAction = True
-		defaultActionGroup = Light
+		defaultActionGroup = Lights
 		redCurve
 		{
 			key = 0 0 0 3
