--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-sub-pod.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-sub-pod.cfg
@@ -131,7 +131,7 @@ PART
 		eventOnName = Lights On
 		eventOffName = Lights Off
 		toggleAction = True
-		defaultActionGroup = Light
+		defaultActionGroup = Lights
 		redCurve
 		{
 			key = 0 0 0 3
