--- a/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-radial-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-radial-250.cfg
@@ -95,7 +95,7 @@ PART
 		eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
 		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
 		toggleAction = True
-		defaultActionGroup = Light
+		defaultActionGroup = Lights
 		redCurve
 		{
 			key = 0 0 0 3
