--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/emmStrut1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/emmStrut1.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.3
+// rsr-light-strut.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 18 Mar 2023
@@ -6,34 +6,40 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = 
+	name = rsr-light-strut
 	oldName = emmStrut1
 	module = Part
 	author = GagaX and zer0Kerbal
 
-MODEL { model = RustyStar/RustyStarRockets/Parts/Utility/RSR_lights/emmStrut1 }
-	MODEL { model = RustyStar/RustyStarRockets/Assets/Lights/ }
+	MODEL { model = RustyStar/RustyStarRockets/Parts/Utility/RSR_lights/emmStrut1 }
 	rescaleFactor = 1.0
+	bulkheadProfiles = srf
+
+	attachRules = 0,1,0,0,1
 	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 0
+
 	TechRequired = largeElectrics
 	entryCost = 200
 	cost = 50
 	category = Utility
 	subcategory = 0
+
 	title = RSR Light Emitting Decoration LED-5
 	manufacturer = #RSS-Agency-titl
 	description = Light
 	tags = #autoLOC_6011162 // moar (more bulb candle dark flash (lamp (light shine spot torch
-	attachRules = 0,1,0,0,1
+
 	mass = 0.005
+	PhysicsSignificance = 1
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 1
+
 	crashTolerance = 8
+
 	maxTemp = 2000
-	PhysicsSignificance = 1
-	bulkheadProfiles = srf
 
 	MODULE
 	{
