--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/landingLaser.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/landingLaser.cfg
@@ -6,43 +6,99 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = 
+	name = rsr-light-landing-laser
 	oldName = landingLaser
 	module = Part
 	author = GagaX and zer0Kerbal
 
 	MODEL { model = RustyStar/RustyStarRockets/Assets/Lights/landingLaser }
 	rescaleFactor = 0.5
+	bulkheadProfiles = srf
+
+	attachRules = 0,1,0,0,1
 	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 0
+
 	TechRequired = advElectrics
 	entryCost = 1299
 	cost = 699
 	category = Utility
 	subcategory = 0
+
 	title = RSR Landing Laser
 	manufacturer = #RSS-Agency-titl
 	description = Landing Laser. For optimal results set these RGB values in VAB/SPH: 0.0 1.0 0.75
-	attachRules = 0,1,0,0,1
 	tags = #autoLOC_6011162 // moar (more bulb candle dark flash (lamp (light shine spot torch
+
 	mass = 0.01
+	PhysicsSignificance = 1
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 1
+
 	crashTolerance = 8
-	maxTemp = 2000
-	PhysicsSignificance = 1
-	bulkheadProfiles = srf
-MODEL { model = RustyStar/RustyStarRockets/Parts/Utility/RSR_lights/ }
+
+	maxTemp = 2000	
+
 	MODULE
 	{
 		name = ModuleLight
 		lightName = nit
-		useAnimationDim = true
-		lightBrightenSpeed = 9
-		lightDimSpeed = 8
-		resourceAmount = 0.01
 		animationName = laserAnimation
-		useResources = true
+			useAnimationDim = True
+			lightBrightenSpeed = 9
+			lightDimSpeed = 8
+		useResources = True
+			resourceName = ElectricCharge
+			resourceAmount = 0.01
+		castLight = True
+			disableColorPicker = false
+			lightR = 0.0
+			lightG = 1.0
+			lightB = 0.0
+		canBlink = True
+			blinkMin = 0.2
+			blinkMax = 2.0
+			blinkRate = 0.5
+			isBlinking = True
+		defaultActionGroup  = Lights
+	}
+	
+	MODULE
+	{
+		name = ModuleColorChanger
+		shaderProperty = _EmissiveColor
+		animRate = 0.8
+		animState = False
+		useRate = True
+		toggleInEditor = True
+		toggleInFlight = True
+		toggleInFlight = True
+		unfocusedRange = 5
+		toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+		eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+		toggleAction = True
+		defaultActionGroup = Lights
+		redCurve
+		{
+			key = 0 0 0 3
+			key = 1 1 0 0
+		}
+		greenCurve
+		{
+			key = 0 0 0 1
+			key = 1 1 1 0
+		}
+		blueCurve
+		{
+			key = 0 0 0 0
+			key = 1 0.7 1.5 0
+		}
+		alphaCurve
+		{
+			key = 0 1
+		}
 	}
 }
