--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-landing-laser.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-landing-laser.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.3
+// rsr-light-landing-laser.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 18 Mar 2023
