--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-inflatable-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-inflatable-250.cfg
@@ -7,6 +7,7 @@
 PART
 {
 	name = rsr-heatshield-inflatable-250
+	oldName = RSRInflateHeatShield
 	module = Part
 	author = RoverDude and zer0Kerbal
 
