--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/RSRHeatShield0.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/RSRHeatShield0.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.3
+// rsr-heatshield-0625.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 18 Mar 2023
@@ -6,7 +6,8 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = RSRHeatShield0
+	name = rsr-heatshield-0625
+	oldName = RSRHeatShield0
 	module = Part
 	author = RoverDude
 	
