--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-inflatable-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-inflatable-250.cfg
@@ -14,7 +14,7 @@ PART
 	MODEL
 	{
 		model = Squad/Parts/Aero/InflatableHeatShield/HeatShield
-		texture = HeatShield, RustyStar/RustyStarRockets/Assets/Thermal/HeatShieldFairing
+		texture = HeatShield, RustyStar/RustyStarRockets/Assets/Thermal/HeatShield
 		texture = HeatShieldFairing, RustyStar/RustyStarRockets/Assets/Thermal/HeatShieldFairing
 	}
 	rescaleFactor = 1.0
@@ -73,9 +73,9 @@ PART
 		name = ModuleAnimateGeneric
 		animationName = InflatableHS
 		isOneShot = false
-		startEventGUIName = #autoLOC_502007 //#autoLOC_502007 = Inflate Heat Shield
-		endEventGUIName = #autoLOC_502008 //#autoLOC_502008 = Deflate Heat Shield
-		actionGUIName = #autoLOC_502007 //#autoLOC_502007 = Inflate Heat Shield
+		startEventGUIName = #autoLOC_502007 // Inflate Heat Shield
+		endEventGUIName = #autoLOC_502008 // Deflate Heat Shield
+		actionGUIName = #autoLOC_502007 // Inflate Heat Shield
 		allowAnimationWhileShielded = False
 		restrictedNode = top
 		disableAfterPlaying = true
@@ -87,10 +87,10 @@ PART
 		ejectionForce = 200
 		ejectionForcePercent = 50
 		isOmniDecoupler = true
-		menuName = #autoLOC_502004 //#autoLOC_502004 = Jettison Heat Shield
 		stagingEnabled = False
-		stagingEnableText = #autoLOC_502005 //#autoLOC_502005 = HS Jettison Not Staged
-		stagingDisableText = #autoLOC_502006 //#autoLOC_502006 = HS Jettison Staged
+		menuName = #autoLOC_502004 // Jettison Heat Shield
+		stagingEnableText = #autoLOC_502005 // HS Jettison Not Staged
+		stagingDisableText = #autoLOC_502006 // HS Jettison Staged
 	}
 
 	MODULE
