--- a/GameData/RustyStar/RustyStarRockets/Parts/Aero/rsr-airbrake-mini.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Aero/rsr-airbrake-mini.cfg
@@ -31,9 +31,9 @@ PART
 	subcategory = 0
 	bulkheadProfiles = srf
 
-	title = R.S.R.A.I.R.B.R.A.K.E.S (mini)
+	title = #RSR-airbrake-mini-titl
 	manufacturer = #RSS-Agency-titl
-	description = Research into feasible ways to slow down a plane in mid-air showed that loose hull panels are pretty great as drag-inducing deceleration devices. The discovery led to the invention of the Aerodynamically Integrated Retrograde Braking Robustly Armed Kinetic Extending System (A.I.R.B.R.A.K.E.S.), which is now popular mostly as a cheap alternative to longer runways. C7 Engineers are still trying to come up with a shorter name for such a long acronym.
+	description = #RSR-airbrake-mini-desc
 	tags = #autoLOC_500114 // (air airbrake aircraft brake dive drag fligh landing plane slow speed spoil
 
 	mass = 0.02
@@ -92,8 +92,8 @@ PART
 		VARIANT
 		{
 			name = Rusty
-			displayName = #RSS-v-stock-name
-			description = #RSS-v-stock-desc
+			displayName = #RSR-v-stock-name
+	description = #RSR-airbrake-mini-desc
 			primaryColor = #7d6523
 			secondaryColor = #ffffff
 			TEXTURE
@@ -106,8 +106,8 @@ PART
 		VARIANT
 		{
 			name = Stock
-			displayName= #RSS-v-stock-name
-			description = #RSS-v-stock-desc
+			displayName= #RSR-v-stock-name
+			description = #RSR-v-stock-desc
 			primaryColor = #303030
 			secondaryColor = #ffffff
 			TEXTURE
