--- a/GameData/RustyStar/RustyStarRockets/Parts/Aero/rsr-airbrake.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Aero/rsr-airbrake.cfg
@@ -32,9 +32,9 @@ PART
 	subcategory = 0
 	bulkheadProfiles = srf
 
-	title = R.S.R.A.I.R.B.R.A.K.E.S
+	title = #RSR-airbrake-titl
 	manufacturer = #RSS-Agency-titl
-	description = Research into feasible ways to slow down a plane in mid-air showed that loose hull panels are pretty great as drag-inducing deceleration devices. The discovery led to the invention of the Aerodynamically Integrated Retrograde Braking Robustly Armed Kinetic Extending System (A.I.R.B.R.A.K.E.S.), which is now popular mostly as a cheap alternative to longer runways. C7 Engineers are still trying to come up with a shorter name for such a long acronym.
+	description = #RSR-airbrake-desc
 	tags = #autoLOC_500114 // (air airbrake aircraft brake dive drag fligh landing plane slow speed spoil
 
 	mass = 0.05
@@ -94,8 +94,8 @@ PART
 		VARIANT
 		{
 			name = Rusty
-			displayName = #RSS-v-stock-name
-			description = #RSS-v-stock-desc
+			displayName = #RSR-v-stock-name
+	description = #RSR-airbrake-desc
 			primaryColor = #7d6523
 			secondaryColor = #ffffff
 			TEXTURE
@@ -108,8 +108,8 @@ PART
 		VARIANT
 		{
 			name = Stock
-			displayName= #RSS-v-stock-name
-			description = #RSS-v-stock-desc
+			displayName= #RSR-v-stock-name
+			description = #RSR-v-stock-desc
 			primaryColor = #303030
 			secondaryColor = #ffffff
 			TEXTURE
