--- a/GameData/RustyStar/RustyStarRockets/Parts/Cargo/rsr-bay-cargo-250-1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Cargo/rsr-bay-cargo-250-1.cfg
@@ -25,9 +25,9 @@ PART
 	category = Payload
 	subcategory = 0
 
-	title = RSR Cargo Bay
+	title = #RSR-bay-cargo-250-1-titl
 	manufacturer = #RSS-Agency-titl
-	description = Est adipisicing do laborum laborum laborum in tempor excepteur. Sunt nisi enim occaecat exercitation nisi commodo magna. Quis eu occaecat pariatur ut enim enim laborum enim dolore sunt proident deserunt eu qui.
+	description = #RSR-bay-cargo-250-1-desc
 	tags = #autoLOC_500914 // contain convey equipment freight hold hollow payload (stor transport utility
 
 	mass = 1
@@ -49,9 +49,9 @@ PART
 	{
 		name = ModuleAnimateGeneric
 		animationName = RSRcargo1
-		startEventGUIName = #RSS-MAG-cargo-strt // Open Cargo Bay
-		endEventGUIName = #RSS-MAG-cargo-stop // Close Cargo Bay
-		actionGUIName = #RSS-MAG-cargo-actn // Toggle Cargo Bay
+		startEventGUIName = #RSR-MAG-cargo-strt // Open Cargo Bay
+		endEventGUIName = #RSR-MAG-cargo-stop // Close Cargo Bay
+		actionGUIName = #RSR-MAG-cargo-actn // Toggle Cargo Bay
 		allowDeployLimit = true
 		revClampDirection = false
 		revClampSpeed = true
