--- a/GameData/RustyStar/RustyStarRockets/Parts/Cargo/rsr-bay-cargo-250-2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Cargo/rsr-bay-cargo-250-2.cfg
@@ -25,9 +25,9 @@ PART
 	category = Payload
 	subcategory = 0
 
-	title = RSR Cargo Bay 2
+	title = #RSR-bay-cargo-250-2-titl
 	manufacturer = #RSS-Agency-titl
-	description = Ut fugiat sit nostrud aliqua qui occaecat Lorem anim cillum ea. Pariatur excepteur ut tempor velit Lorem tempor non aliquip eiusmod incididunt sit duis velit qui ea.
+	description = #RSR-bay-cargo-250-2-desc
 	tags = #autoLOC_500914 // contain convey equipment freight hold hollow payload (stor transport utility
 
 	mass = 1
@@ -49,9 +49,9 @@ PART
 	{
 		name = ModuleAnimateGeneric
 		animationName = RSRcargo2
-		startEventGUIName = #RSS-MAG-cargo-strt // Open Cargo Bay
-		endEventGUIName = #RSS-MAG-cargo-stop // Close Cargo Bay
-		actionGUIName = #RSS-MAG-cargo-actn // Toggle Cargo Bay
+		startEventGUIName = #RSR-MAG-cargo-strt // Open Cargo Bay
+		endEventGUIName = #RSR-MAG-cargo-stop // Close Cargo Bay
+		actionGUIName = #RSR-MAG-cargo-actn // Toggle Cargo Bay
 		allowDeployLimit = true
 		revClampDirection = false
 		revClampSpeed = true
