--- a/GameData/RustyStar/RustyStarRockets/Parts/Chute/rsr-chute-drogue.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Chute/rsr-chute-drogue.cfg
@@ -29,9 +29,9 @@ PART
 	category = Utility
 	subcategory = 0
 
-	title = RSR Drogue Parachute
+	title = #RSR-chute-drogue-titl
 	manufacturer = #RSS-Agency-titl
-	description = It's not the fall that kills you; it's the sudden stop at the end. - Douglas Adams
+	description = #RSR-chute-drogue-desc
 	tags = #autoLOC_500926 // arrest canopy chute decel descen drag entry fall landing orange re- return safe slow stab
 
 	mass = 0.1 // 0.075 mk12-r
