--- a/GameData/RustyStar/RustyStarRockets/Parts/Chute/rsr-chute-radial.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Chute/rsr-chute-radial.cfg
@@ -31,9 +31,9 @@ PART
 	category = Utility
 	subcategory = 0
 
-	title = RSR Parachute 02
+	title = #RSR-chute-radial-titl
 	manufacturer = #RSS-Agency-titl
-	description = It's not the fall that kills you; it's the sudden stop at the end. - Douglas Adams
+	description = #RSR-chute-radial-desc
 	tags = #autoLOC_500923 // arrest canopy chute decel descen drag entry fall landing re- return safe slow white
 
 	mass = 0.1
