--- a/GameData/RustyStar/RustyStarRockets/Parts/Chute/rsr-chute.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Chute/rsr-chute.cfg
@@ -29,9 +29,9 @@ PART
 	category = Utility
 	subcategory = 0
 
-	title = RSR Parachute
+	title = #RSR-chute-titl
 	manufacturer = #RSS-Agency-titl
-	description = It's not the fall that kills you; it's the sudden stop at the end.- Douglas Adams
+	description = #RSR-chute-desc
 
 	mass = 0.3
 
