--- a/GameData/RustyStar/RustyStarRockets/Parts/Coupling/rsr-coupling-sep-125.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Coupling/rsr-coupling-sep-125.cfg
@@ -29,9 +29,9 @@ PART
 	category = Coupling
 	subcategory = 0
 
-	title = Separator 1.25m
+	title = #RSR-coupling-sep-125-titl
 	manufacturer = #RSS-Agency-titl
-	description = Made of scrap metal and assorted firecrackers.
+	description = #RSR-coupling-sep-125-desc
 	tags = #autoLOC_501795   // decouple	
 
 	mass = 0.05
