--- a/GameData/RustyStar/RustyStarRockets/Parts/Coupling/rsr-coupling-sep-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Coupling/rsr-coupling-sep-250.cfg
@@ -29,9 +29,9 @@ PART
 	category = Coupling
 	subcategory = 0
 
-	title = Rusty Separator 2
+	title = #RSR-coupling-sep-250-titl
 	manufacturer = #RSS-Agency-titl
-	description = Created as a substitute for infamous Zipper X-1 
+	description = #RSR-coupling-sep-250-desc
 	tags = #autoLOC_501795   // decouple	
 
 	mass = 0.075 // 0.21
