--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-obruc-1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-obruc-1.cfg
@@ -24,9 +24,9 @@ PART
 	category = Utility
 	subcategory = 0
 
-	title = RSR Light Emitting Decoration LED-3
+	title = #RSR-light-obruc-1-titl
 	manufacturer = #RSS-Agency-titl
-	description = Light belt
+	description = #RSR-light-obruc-1-desc
 	tags = #autoLOC_6011162 // moar (more bulb candle dark flash (lamp (light shine spot torch
 
 	mass = 0.015
@@ -45,9 +45,9 @@ PART
 	{
 		name = ModuleAnimateGeneric
 		animationName = EmmAnim
-		startEventGUIName = #RSS-MAG-light-belt-strt // Let there be light
-		endEventGUIName = #RSS-MAG-light-belt-stop // Let there be dark
-		actionGUIName = #RSS-MAG-light-belt-actn // Toggle unnecessary lights
+		startEventGUIName = #RSR-MAG-light-belt-strt // Let there be light
+		endEventGUIName = #RSR-MAG-light-belt-stop // Let there be dark
+		actionGUIName = #RSR-MAG-light-belt-actn // Toggle unnecessary lights
 		eventAvailableEditor = True
 		eventAvailableFlight = True
 		eventAvailableEVA = True
