--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-spot.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-spot.cfg
@@ -24,9 +24,9 @@ PART
 	category = Utility
 	subcategory = 0
 
-	title = RSR Spotlight
+	title = #RSR-light-spot-titl
 	manufacturer = #RSS-Agency-titl
-	description = For optimal results set these RGB values in VAB/SPH: 0.0 1.0 0.75
+	description = #RSR-light-spot-desc
 	tags = #autoLOC_6011162 // moar (more bulb candle dark flash (lamp (light shine spot torch
 
 	mass = 0.01 // 0.005
