--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-125.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-125.cfg
@@ -37,9 +37,9 @@ PART
 	category = Thermal
 	subcategory = 0
 
-	title = #autoLOC_500181 // Heat Shield (1.25m)
+	title = #RSR-heatshield-125-titl
 	manufacturer = #RSS-Agency-titl
-	description = #autoLOC_500182 // A small structural heat shield with an integrated fairing
+	description = #RSR-heatshield-125-desc
 	tags = #autoLOC_500183 // ablat drag entry insulate protect re- rocket therm
 
 	mass = 0.1
