--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-375.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-375.cfg
@@ -37,9 +37,9 @@ PART
 	category = Thermal
 	subcategory = 0
 
-	title = #autoLOC_500187
+	title = #RSR-heatshield-375-titl
 	manufacturer = #RSS-Agency-titl
-	description = #autoLOC_500188
+	description = #RSR-heatshield-375-desc
 	tags = #autoLOC_500189 // ablat drag entry insulate protect re- rocket therm
 
 	mass = 1.0
