--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-inflatable-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-inflatable-250.cfg
@@ -41,9 +41,9 @@ PART
 	category = Thermal
 	subcategory = 0
 
-	title = Heat Shield 2.5m (Inflatable 10m)
+	title = #RSR-heatshield-inflatable-250-titl
 	manufacturer = #RSS-Agency-titl
-	description = Based on the design of a child's toy, this heat shield uses a set of inflatable rings covered with a thermal blanket to provide a generous 10 meter heat shield for reentry and deceleration, and the aerodynamic qualities of an untethered bouncy castle.
+	description = #RSR-heatshield-inflatable-250-desc
 	tags = #autoLOC_500192 // balloon drag entry expand inflat insulate protect re- rocket therm
 
 	mass = 1.5
