--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-therm-rad.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-therm-rad.cfg
@@ -26,9 +26,9 @@ PART
 	category = Thermal
 	subcategory = 0
 
-	title = #RSS-therm-rad-titl
+	title = #RSR-therm-rad-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-therm-rad-desc
+	description = #RSR-therm-rad-desc
 	tags = #autoLOC_500801 // cool fixed heat moderat radiat static temperat therm
 	
 	mass = 0.03
