--- a/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-klaw-small.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-klaw-small.cfg
@@ -26,9 +26,9 @@ PART
 	category = Coupling
 	subcategory = 0
 
-	title = #RSS-klaw-small-titl
+	title = #RSR-klaw-small-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-klaw-small-desc
+	description = #RSR-klaw-small-desc
 	tags = #autoLOC_500863 // a.r.m arm asteroid capture clam claw connect dock fasten grab join klaw nasa
 
 	mass = 0.03
