--- a/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-klaw.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-klaw.cfg
@@ -27,9 +27,9 @@ PART
 	category = Coupling
 	subcategory = 0
 
-	title = #RSS-klaw-titl
+	title = #RSR-klaw-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-klaw-desc
+	description = #RSR-klaw-desc
 	tags = #autoLOC_500863 // a.r.m arm asteroid capture clam claw connect dock fasten grab join klaw nasa
 
 	mass = 0.075
