--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-direct-1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-direct-1.cfg
@@ -25,9 +25,9 @@ PART
 	category = Communication
 	subcategory = 0
 
-	title = #RSS-ant-direct-1-titl
+	title = #RSR-ant-direct-1-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-ant-direct-1-desc
+	description = #RSR-ant-direct-1-desc
 	tags = #autoLOC_500807 // aerial antenna deploy direct dish extend fold radio signal transmi
 
 	mass = 0.03
