--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-100.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-100.cfg
@@ -28,9 +28,9 @@ PART
 	category = Communication
 	subcategory = 0
 
-	title = #RSS-ant-relay-100-titl
+	title = #RSR-ant-relay-100-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-ant-relay-100-desc
+	description = #RSR-ant-relay-100-desc
 	tags = #autoLOC_500807 // aerial antenna deploy direct dish extend fold radio signal transmi
 
 	mass = 0.45
