--- a/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x0.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Antenna/rsr-antenna-relay-x0.cfg
@@ -26,9 +26,9 @@ PART
 	category = Communication
 	subcategory = 0
 
-	title = #RSS-ant-relay-x0-titl
+	title = #RSR-ant-relay-x0-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-ant-relay-x0-desc
+	description = #RSR-ant-relay-x0-desc
 	tags = #autoLOC_500807 // aerial antenna deploy direct dish extend fold radio signal transmi
 
 	mass = 0.05
