--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-cockpit-mk2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-cockpit-mk2.cfg
@@ -29,9 +29,9 @@ PART
 	category = Pods
 	subcategory = 0
 
-	title = #RSS-cockpit-mk2-titl
+	title = #RSR-cockpit-mk2-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-cockpit-mk2-desc
+	description = #RSR-cockpit-mk2-desc
 	tags = #autoLOC_500327 //#autoLOC_500327 = aero aircraft cmg command control ?eva fly gyro ?iva moment pilot plane react space stab steer torque
 
 	mass = 1.8
