--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-hq.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-hq.cfg
@@ -29,9 +29,9 @@ PART
 	category = Pods
 	subcategory = 0
 
-	title = #RSS-hq-titl
+	title = #RSR-hq-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-hq-desc
+	description = #RSR-hq-desc
 	tags = #autoLoc_6002178 = Base
 
 	mass = 50
