--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-KerbalInTheBox.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-KerbalInTheBox.cfg
@@ -36,9 +36,9 @@ PART
 	category = Pods
 	subcategory = 0
 
-	title = #RSS-KerbalInTheBox-titl
+	title = #RSR-KerbalInTheBox-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-KerbalInTheBox-desc
+	description = #RSR-KerbalInTheBox-desc
 	tags = #autoLOC_500321 //#autoLOC_500321 = capsule cmg control ?eva fly gyro ?iva moment pilot react rocket space stab steer torque
 
 	mass = 0.65
