--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-skull-pod.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-skull-pod.cfg
@@ -30,9 +30,9 @@ PART
 	category = Pods
 	subcategory = 0
 
-	title = #RSS-skull-pod-titl
+	title = #RSR-skull-pod-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-skull-pod-desc
+	description = #RSR-skull-pod-desc
 
 // new
 	radiatorMax = 1.5
