--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-sphere-125.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-sphere-125.cfg
@@ -38,9 +38,9 @@ PART
 	category = Pods
 	subcategory = 0
 
-	title = #RSS-sphere-125-titl
+	title = #RSR-sphere-125-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-sphere-125-desc
+	description = #RSR-sphere-125-desc
 	tags = capsule cmg control ?eva fly gyro ?iva moment pilot react rocket space stab steer torque sphere
 
 	mass = 9
