--- a/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-sub-pod.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Command/rsr-sub-pod.cfg
@@ -31,9 +31,9 @@ PART
 	category = Pods
 	subcategory = 0
 
-	title = #RSS-sub-pod-titl
+	title = #RSR-sub-pod-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-sub-pod-desc
+	description = #RSR-sub-pod-desc
 
 	mass = 0.76
 
