--- a/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-reactor.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Electrical/rsr-elec-reactor.cfg
@@ -29,9 +29,9 @@ PART
 	category = Electrical
 	subcategory = 0
 
-	title = #RSS-elec-reactor-titl
+	title = #RSR-elec-reactor-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-elec-reactor-desc
+	description = #RSR-elec-reactor-desc
 	tags = #autoLOC_500387 //#autoLOC_500387 = active atom charge e/c elect energ generat isotope nuclear nuke power radio rtg thermo volt watt
 
 	mass = 0.5
