--- a/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-engine-alien.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Misc/rsr-engine-alien.cfg
@@ -24,9 +24,9 @@ PART
 	category = none
 	subcategory = 0
 
-	title = #RSS-eng-alien-titl
+	title = #RSR-eng-alien-titl
 	manufacturer = X
-	description = #RSS-eng-alien-desc
+	description = #RSR-eng-alien-desc
 
 	mass = 1.75
 
