--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-goo.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-goo.cfg
@@ -29,7 +29,7 @@ PART
 
 	title = RSR Mystery Goo™ Containment Unit
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-sci-exp-goo-desc
+	description = #RSR-sci-exp-goo-desc
 	tags = #autoLOC_500687 //#autoLOC_500687 = experiment research science
 
 	mass = 0.05
