--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-rust.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-exp-rust.cfg
@@ -25,9 +25,9 @@ PART
 	category = Science
 	subcategory = 0
 
-	title = #RSS-sci-exp-rust-titl
+	title = #RSR-sci-exp-rust-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-sci-exp-rust-desc
+	description = #RSR-sci-exp-rust-desc
 	tags = #autoLOC_500687 //#autoLOC_500687 = experiment research science
 
 	mass = 0.005
