--- a/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-lab-2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Science/rsr-science-lab-2.cfg
@@ -34,9 +34,9 @@ PART
 	category = Science
 	subcategory = 0
 
-	title = #RSS-sci-lab-2-titl
+	title = #RSR-sci-lab-2-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSS-sci-lab-2-desc
+	description = #RSR-sci-lab-2-desc
 	tags = #autoLOC_500690 //#autoLOC_500690 = experiment laboratory research science
 
 	mass = 3.5
